--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portfolio</title>
-</head>
-<body>
+<% layout('layouts/boilerplate')%>
+
     <h1>lets get started</h1>
-</body>
-</html>
