--- a/views/templates/services.ejs
+++ b/views/templates/services.ejs
@@ -1,11 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>this is the service page</h1>
-</body>
-</html>
+<% layout('layouts/boilerplate')%>
+
+    <div class="provided col-sm-12 text-center mb-5">
+        <h1>SERVICES OFFERED</h1> 
+    </div>
+
+
+        <section class="GeneralCoding row">
+            
+            <div class="imageSection">
+                <img src="/Images/WebD.jpg" alt="">
+            </div>
+
+            <div class="textSection">
+                <h5 class="text-uppercase mt-4 mb-3">C++ Programming</h5>
+                 <p>Web development refers to the creating, building, and maintaining of websites. It includes aspects such as web design, web publishing, web programming, and database management.</p>
+            </div>
+
+        </section>
+
+
+        <section class="webD row">
+            
+            <div class="imageSection">
+                <img src="/Images/WebD1.jpg" alt="">
+            </div>
+
+            <div class="textSection">
+                <h5 class="text-uppercase mt-4 mb-3">Web Development</h5>
+                 <p>Web development refers to the creating, building, and maintaining of websites. It includes aspects such as web design, web publishing, web programming, and database management.</p>
+            </div>
+
+        </section>
+
+
+
+
