--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -5,16 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/8f6089454f.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/Stylesheets/style.css">
+
+
+<style>
+
+
+</style>
+
+
+
+
+
+
+
 </head>
 
 
 <body class="d-flex flex-column vh-100"></body>
     
+    <%- include('../partials/navbar')%>
 
-
-    <main class="container mt-5">
+    <main class="container mt-5 vh-100">
         <%- body %>
     </main>
+
+    <%- include('../partials/footer') %>
 
 
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
